--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,31 +1,17 @@
-body {
-  background-color: aquamarine;
-  /* background: url(https://images5.alphacoders.com/110/1109788.jpg); */
-
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: Poppins;
 }
 
-
- .landing {
-  /* background: url(https://images5.alphacoders.com/110/1109788.jpg);  */
-   display: flex;
-  justify-content: space-evenly;
-  padding: 35px 35px;
-  align-items: center;
-} 
+body {
+  background-color: #292d36;
+  color: var(--first-color);
+  margin: auto;
+  background: url("https://cdn.pixabay.com/photo/2017/10/22/21/02/food-2879265_960_720.jpg");
+  background-attachment: fixed;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+}
