--- a/client/src/components/CreateRecipe/CreateRecipe.css
+++ b/client/src/components/CreateRecipe/CreateRecipe.css
@@ -4,7 +4,7 @@
 .formContainer {
   border: initial;
   width: 50%;
-  height: 42.5vw;
+  height: 43.5vw;
   margin: 20px 0px 0px 250px;
   padding: 5px;
   border-radius: 20px;
@@ -43,7 +43,7 @@ h1 {
   transform: translate(-50%, -50%);
   z-index: 2;
   width: 90%;
-  height:45%;
+  height:49%;
 }
 
 label {
@@ -107,6 +107,11 @@ input {
     background-color: rgb(206, 107, 25);
     color: white;
   }
+  .createButton2 {
+    
+    opacity: 0;
+
+  }
   .returnButton {
     padding: 1px;
     margin: 1px;
@@ -117,12 +122,12 @@ input {
     border: 2px solid rgba(182, 76, 6, 0.911);
     background-color: rgb(255, 255, 255);
     color: rgb(212, 79, 79);
-    text-decoration: none;
     cursor: pointer;
     transition-duration: 0.4s;
     margin-top: 500px;
-    margin-left: 275px;
+    margin-left: 255px;
   }
+ 
   .returnButton:hover {
     background-color: rgb(206, 107, 25);
     color: white;
@@ -131,7 +136,7 @@ input {
 .tipoDeDietas {
   align-items: center;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   background-color: rgb(124, 24, 24);
   background-color: rgba(122, 36, 36, 0.4);
   color: white;
@@ -143,39 +148,31 @@ input {
   transform: translate(-50%, -50%);
   z-index: 2;
   width: 70%;
-  height: 38%;
+  height: 35%;
   padding: 5px;
+  font-size: 1vw;
 }
-.tipoDeDietas label {
-        font-family: 'Charm', cursive;
-        font-size: 25px;
-        font-weight: 100;
-        color: blanchedalmond;
-        padding: 3px;
-        margin-right: 500px;
-}
+
 .opciones {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   text-align: center;
-  width: 90%;
+  width: 100%;
 }
-.opciones div {
-    display: flex;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    align-items: center;
-    align-content: space-around;
-    width: 200px;
-    height: 40px;
-} 
-.box2 {
-border-radius: 8px;
-  border: none;
-  margin: 10px 10px 0px 00px;
+.box{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.box  h3{
-    border-radius: 8px;
-      border: none;
-      margin: 0px 0px 0px 15px;
-    }
+
+.box2{
+  cursor: pointer;
+}
+
+.formContainer h5 {
+  color: red;
+  font-family: 'Charm', cursive;
+  font-size: 15px;
+  font-weight: 150;
+ 
+}
