--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -14,7 +14,13 @@
   top: 2.3%;
   left: 24%;
   cursor: pointer;
-  
+  transition-duration: 0.4s;
+}
+
+.navbar_button1:hover{
+  background-color: #1e486b;
+  border-radius: 0.4vw;
+  border-color: #476074;
 }
 
 .navbar_button2 {
@@ -28,6 +34,13 @@
   top: 2.3%;
   left: 41%;
   cursor: pointer;
+  transition-duration: 0.4s;
+}
+
+.navbar_button2:hover{
+  background-color: #1e486b;
+  border-radius: 0.4vw;
+  border-color: #476074;
 }
 
 .navbar_searchbar {
