--- a/client/src/components/SearchBar/SearchBar.css
+++ b/client/src/components/SearchBar/SearchBar.css
@@ -1,5 +1,5 @@
 
-#buttonSearch {
+.buttonSearch {
     font-size: 15px;
     height: 28px;
     width: 78px;
@@ -10,7 +10,14 @@
     top: 2.3%;
     left: 63%;
     cursor: pointer;
+  transition-duration: 0.4s;
   }
+.buttonSearch:hover {
+  background-color: #1e486b;
+  border-radius: 0.4vw;
+  border-color: #476074;
+}
+
   #inputName {
     border-radius: 2px;
     height: 25px;
