--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -51,3 +51,32 @@
   left: 41%;
   cursor: pointer;
 }
+
+#not_found{
+  color: rgba(255, 0, 0, 0.911);
+  font-size: 23px;
+   background-color:rgb(95, 90, 84);
+  border-radius: 0.4vw;
+  height: 48px;
+  width: 188px;
+  padding: 0.7vw;
+  position: absolute;
+  top: 20%;
+  left: 40%;
+}
+
+#not_found2{
+  position: absolute;
+  top: 38%;
+  left: 43.5%;
+  color: rgba(0, 0, 0, 0.911);
+  font-size: 23px;
+}
+
+#img{
+  position: absolute;
+  top: 30%;
+  left: 39.5%;
+  height: 15vw;
+  width: 15vw;
+}
